--- a/public/index.html
+++ b/public/index.html
@@ -12,9 +12,9 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Test Géodan Nzissié</title>
+    <script id="react-dotenv" src="./env.js"></script>
   </head>
   <body>
     <div id="root"></div>
-
   </body>
 </html>
